# dwm-status

./: .gitignore  Cargo.toml  Makefile  README.md  config.yaml  run.sh
src/: config.rs  lib.rs  main.rs  status_bar.rs
src/features/: cpu.rs  date_time.rs  feature_trait.rs  gpu.rs  memory.rs  mod.rs  net_stats.rs  ping.rs  vpn.rs  vpn_status.rs
