[package]
name = "dwm_status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.1", features = ["full"] }
futures = "0.3.21"
async-trait = "0.1.53"
chrono = "0.4.19"
byte-unit = "4.0.14"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "1.0.81"
